# ikitech-grupo-exito-c1

./: .gitignore  Dockerfile  README.md  catalog-info.yaml  detectar_duplicados_exactos.py  docker-compose.observability-no-marquez.yml  docker-compose.observability-windows.yml  docker-compose.observability.yml  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt  start-observability-windows.ps1  start-observability.sh
dags/masterdata_ikitech/: dag_ingesta_diaria_maestras.py  dag_procesamiento_archivo_maestra.py
dags/masterdata_ikitech/config/: convert_layouts_to_toon.py  file_table_mapping.json  layouts.json  layouts.toon
dags/masterdata_ikitech/parsers/: __init__.py  fixed_width_parser.py
docs/: arquitectura.md  configuracion.md  index.md  observability_stack.md  operacion.md
input/: CRLISUCATE.txt  XCADENA.txt  XCAN.txt  XCATEG.txt  XGEN.txt  XLEXSUBC.txt  XWEDEP.txt
observability/: README.md  airflow_metrics_config.txt  test-observability.sh
observability/loki/: promtail-config.yml
observability/marquez/: init-marquez-db.sql  marquez.yml
observability/prometheus/: prometheus-windows.yml  prometheus.yml  statsd-mapping.yml
pgdata/: postmaster.pid
pgdata/global/: 1260  2396  pg_control  pg_internal.init
pgdata/pg_stat_tmp/: db_0.stat  db_16384.stat  global.stat
pgdata/pg_xact/: 0000
pipeline/: main-pipeline.yml
processed/: XCATEG_20251202_213840.txt  XCIUDAD_20251202_185137.txt  XUEN_20251202_213837.txt  XWECIA_20251202_213836.txt  XWEPAI_20251202_213837.txt
tests/: test_parser.py
tests/data/: XLEXSUBL.txt
(+323 files in other folders)
