[tool.poetry]
name = "erp-maestras-ikitech"
version = "1.0.0"
description = "Ingesta de maestras ERP para Grupo Éxito"
authors = ["IkiTech <manuela.larrea@ikitech.com.co>"]

[tool.poetry.dependencies]
python = "^3.11"
apache-airflow = "^2.8.0"
apache-airflow-providers-postgres = "^5.0.0"
apache-airflow-providers-cncf-kubernetes = "^5.0.0"
apache-airflow-providers-google = "^8.0.0"
kafka-python = "^2.0.2"
openpyxl = "^3.0.10"
toon-format = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
mkdocs = "^1.4.2"
mkdocs-material = "^9.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
